--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.9",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
