--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,11 @@
               "src/assets/css/style.css"
 
 
+
             ],
             "scripts": [
               "src/assets/js/imagesloaded.pkgd.min.js",
+              "src/assets/js/bootstrap.min.js",
               "src/assets/js/isotope.pkgd.min.js",
               "src/assets/js/jquery.easing.min.js",
               "src/assets/js/main.js",
@@ -46,6 +48,11 @@
               "src/assets/js/scrolling-nav.js",
               "src/assets/js/slick.min.js",
               "src/assets/js/vendor/modernizr-3.6.0.min.js"
+
+
+
+
+
 
 
 
